<resources>
    <string name="app_name">WishlistProject</string>
    <string name="new_item">New Item</string>
    <string name="priceExample">Ex: 4.99</string>
    <string name="urlExample">Ex: http://example.ex/my-item</string>
    <string name="submit">Submit</string>
    <string name="uri_example">Ex: http://example.ex/my-item</string>
    <string name="item_name">Item Name</string>
    <string name="price_example">Ex: 4.99</string>
    <string name="price_ph">Price</string>
    <string name="url_ph">URL</string>
</resources>