<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:elevation="4dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Wish List"
        app:titleTextColor="@android:color/white" />


    <EditText
        android:id="@+id/et_price"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/price_example"
        android:inputType="numberDecimal"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/et_item_name" />

    <EditText
        android:id="@+id/et_item_name"
        android:layout_width="245dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:hint="@string/item_name"
        android:inputType="text"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/et_url"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/submit"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toEndOf="@+id/et_url" />

    <EditText
        android:id="@+id/et_url"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="116dp"
        android:autofillHints=""
        android:hint="@string/uri_example"
        android:inputType="textUri"
        android:textColor="@color/black"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_wishlist"
        android:layout_width="395dp"
        android:layout_height="543dp"
        android:layout_margin="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>
